--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>CDC</title>
   </head>
   <body>
