--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <title>CDC</title>
+    <title>@Caissedegreve</title>
   </head>
   <body>
     <div id="root"></div>
