--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
+    <!--
+    _
+    <`--'\>______
+    /. .  `'     \
+   (`')  ,        @
+    `-._,        /
+       )-)_/--( >  jv
+      ''''  ''''
+    -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <meta name="theme-color" content="#1D9BF0" />
+    <meta name="Caisse de grève" content="Moteur de recherche des tweets de Caisses de grève."/>
+    <meta property="og:title" content="Caisse de grève" />
+    <meta property="og:site_name" content="Caisse de grève" />
+    <meta property="og:url" content="https://caisse-de-greve.netlify.app/" />
+    <meta property="og:description" content="Moteur de recherche des tweets de Caisses de grève." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="476">
+    <meta property="og:image:height" content="249">
+    <meta property="og:image" content="https://caisse-de-greve.netlify.app/preview.jpg" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="Caisse de grève">
+    <meta name="twitter:creator" content="@Caissedegreve">
+    <meta name="twitter:title" content="Moteur de recherche @Caissedegreve.">
+    <meta name="twitter:description" content="Moteur de recherche des tweets de Caisses de grève.">
+    <meta name="twitter:image" content="https://caisse-de-greve.netlify.app/preview.jpg">
+
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>@Caissedegreve</title>
