--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <title>@Caissedegreve</title>
+    <title>@Caissesdegreve</title>
   </head>
   <body>
     <div id="root"></div>
